--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="zaglavljelogin">
+    <header class="container">
 
         <!--NAVIGATION-->
         <div class="topnav" id="myTopnav">
@@ -34,7 +34,7 @@
 
     <!--LOG IN-->
     <div class="loginForma" id="mojaForma">
-        <form id="pokupi">
+        <form id="sign-in-form">
             <fieldset>
                 <legend>Sign in</legend>
 
