responsive sign up refactoring

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <br> Second name:
                         <span class="greskaR" title="Pogrešan unos. Unesite prezime"></span>
                         <input type="text"  id="prezimeRegistracija" onblur="validR('prezimeRegistracija', 1)" onfocus="unosR(1)" required>
-                         E-mail:
+                        <br> E-mail:
                         <span class="greskaR" title="Pogrešan unos. Unesite validan E-mail"></span>
                         <input type="email"  id="emailRegistracija" onblur="validMailR('emailRegistracija', 2)" onfocus="unosR(2)" required>
                         <br> Password:
