--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
                         <br> Password:
                         <span class="error-sign-up" title="Error. Password format only letters and numbers"></span>
                         <input type="password"  id="sign-up-password" name="bday" onblur="validPassword('sign-up-password', 3, 'error-sign-up')" onfocus="clearOnFocus('error-sign-up', 3)" required>
-                        <!--Uraditi validaciju-->
+                        <!--Uraditi validaciju password again-->
                         <br> Repeat Password:
                         <span class="error-sign-up" title="Error. Password format only letters and numbers"></span>
                         <input type="password"  id="sign-up-password-r" name="bday" onblur="validPassword('sign-up-password-r', 4, 'error-sign-up')" onfocus="clearOnFocus('error-sign-up', 4)" required>
 
                     </div>
                     <div id="formRight" >
-                        <!--Uraditi validaciju-->
                         Adress 1:
                         <span class="error-sign-up" title="Error. Address contain only letters and numbers"></span>
                         <input type="text" placeholder="(required)" id="address1" onblur="validPassword('address1', 5, 'error-sign-up')" onfocus="clearOnFocus('error-sign-up', 5)" required>
@@ -99,8 +98,6 @@
     </footer>
     <script src="js/index.js"></script>
     <script src="js/logovanje.js"></script>
-    <script src="js/validacijalogovanja.js"></script>
-    <script src="js/validacijaregistracije.js"></script>
     <script src="js/registracija.js"></script>
     <script>
     </script>
