--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <button type="button" onclick="registracija()">Sign Up</button>
+                    <button type="button" onclick="signUp()">Sign Up</button>
                     <button type="reset" >Clear</button>
                     <br><br>
                     <input type="button" onclick="hideSignUpForm()" value="Close">
@@ -98,7 +98,6 @@
     </footer>
     <script src="js/index.js"></script>
     <script src="js/logovanje.js"></script>
-    <script src="js/registracija.js"></script>
     <script>
     </script>
 </body>
