refactoring sign up function
class is remove from signUp function infront of it, status identificator add

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <input type="number" minlength="11" maxlength="15"  id="phone2" onblur="validPhone('phone2', 8, 'error-sign-up')" onfocus="clearOnFocus('error-sign-up', 8)">
                         <br>
                         <div style="display:none"> Status:
-                            <input type="number" placeholder="administrator" id="kolicinaRegistracija" readonly value="1"><br>
+                            <input type="number" placeholder="administrator" id="status" readonly value="1"><br>
                         </div>
                     </div>
                 </div>
