--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="container">
 
         <!--NAVIGATION-->
-        <div class="topnav" id="myTopnav">
-            <a id="start" class="active" href="start.html" style="display: none">Start</a>           
+        <div>
+            <a id="start" class="active" href="./view/start.html" style="display: none">Start</a>           
            <a id="go-sign-up-form" href="#" onclick="showSignUpForm()">Sign Up</a>
             <a id="go-sign-in-form" href="#" onclick="showSignInForm()" style="display:none">Sign In</a>            
         </div>
@@ -92,7 +92,7 @@
             </fieldset>
         </form>
     </div>
-    <footer id="podnozje">
+    <footer>
         <p>Beograd, Milutina Milankovica 1, 011-111-1111</p>
     </footer>
     <script src="js/index.js"></script>    
