--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container">
 
         <!--NAVIGATION-->
-        <div>
+        <div class="topnav">
             <a id="start" class="active" href="./view/start.html" style="display: none">Start</a>           
            <a id="go-sign-up-form" href="#" onclick="showSignUpForm()">Sign Up</a>
             <a id="go-sign-in-form" href="#" onclick="showSignInForm()" style="display:none">Sign In</a>            
